# lark-to-notes

./: .gitignore  AGENTS.md  README.md  lark-to-notes.toml  plan_for_lark_to_notes_workflow.md  pyproject.toml
.beads/: config.yaml  issues.jsonl
automation/: __init__.py
automation/lark_worker/: __init__.py  cli.py  config.json  config.py  db.py  distill.py  example-config.json  fixture_corpus.py  lark.py  launchd.py  models.py  notes.py  people.py  service.py  source_access.py
contrib/: sync-daemon.launchd.example.plist  sync-events-pipeline.example.sh
scripts/: ci_reactions_gate.py  demo_offline_vault.sh  integration_run.py  reaction_e2e_harness.py  verify_live_adapter.py
scripts/macos/launchd/: com.lark-to-notes.sync-daemon.example.plist
src/lark_to_notes/: __init__.py  logging.py
src/lark_to_notes/budget/: __init__.py  chunking.py  models.py  policy.py  store.py
src/lark_to_notes/cli/: __init__.py
src/lark_to_notes/config/: __init__.py  sources.py
src/lark_to_notes/distill/: __init__.py  heuristics.py  models.py  reaction_distill.py  reaction_reclassify.py  reaction_rules.py  reaction_signal.py  routing.py
tests/: conftest.py  test_budget.py  test_ci_reactions_gate.py  test_cli.py  test_contrib_samples.py  test_distill.py  test_e2e.py  test_e2e_multi.py  test_e2e_workflow.py  test_feedback.py  test_fixture_corpus.py  test_fixture_harness.py  test_golden.py  test_golden_reaction_vault.py  test_intake.py  test_integration_logging.py  test_lark_cli_retry.py  test_live_chat_events.py  test_live_chat_ingest.py  test_live_doc_adapters.py  test_live_reaction_failure_paths.py  test_live_sync_controls.py  test_live_worker_config.py  test_live_ws_ndjson_drain_e2e.py  test_performance.py  test_reaction_backfill.py  test_reaction_e2e_harness.py  test_reaction_effective.py  test_reaction_envelope_validation.py  test_reaction_envelopes.py  test_reaction_model.py  test_reaction_preflight.py  test_reaction_reclassify.py  test_reaction_redaction.py  test_reaction_replay.py  test_reaction_store.py  test_reaction_vault_reconcile.py  test_render.py  test_runtime.py  test_scaffold.py  (+4 more)
(+125 files in other folders)
